Introduce custom hook useLanguage

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,3 +1,8 @@
 {
-    "test":"Test"
+    "designMode": {
+        "gridWidth": "Raster Breite",
+        "gridHeight": "Raster Höhe",
+        "part": "Bestandteil",
+        "generatedCode": "Generiertes Coding"
+    }
 }
