--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,3 +1,8 @@
 {
-    "test":"Test"
+    "designMode": {
+        "gridWidth": "Grid width",
+        "gridHeight": "Grid height",
+        "part": "Part",
+        "generatedCode": "Generated Code"
+    }
 }
